--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+---
+Forked from http://git.linux-nfs.org/?p=steved/libnfsidmap.git
+commit 1a3b4db85cea016d2d6a803f2eb71fd5002f5d1a
+---
+
+
 Library to help mapping id's, mainly for NFSv4.
 
 When NFSv4 is using AUTH_GSS (which currently only supports Kerberos v5), the
